Update version number, add readme, fix z-index

--- a/src/app/daterange-picker/ang.daterange.picker.component.scss
+++ b/src/app/daterange-picker/ang.daterange.picker.component.scss
@@ -3,6 +3,7 @@
 	top: 0;
 	heigth: 100vh;
 	width: 100vw;
+  z-index: 10000;
   .mat-card {
     display: flex;
     flex-direction: column;
